# vispipe

./: .gitignore  .gitlab-ci.yml  .readthedocs.yaml  README.md  pyproject.toml  setup.py
.agents/skills/prepush_clean/: SKILL.md
.github/workflows/: python-package.yml  python-test.yml
example/: config.json  hist_data.npz  pyproject.toml  settings.json  unstruct_data.npz
src/docs/: requirements.txt
src/docs/source/: conf.py  index.rst
src/docs/source/_static/css/: colors.css
src/docs/source/guides/: config.rst  funcdict.rst  index.rst  opt.rst  quickstart.rst  settings.rst
src/docs/source/reference/: _vispipe.rst  cli.rst  index.rst  plot_backend.rst  settings.rst  settings_priority.rst  vispipe.rst
src/docs/source/reference/plot_backend/: MPL_Figure.rst  gridedit.rst
src/docs/source/reference/plot_backend/MPL_Figure/: vispipe.plot_backend.MPL_Figure.cbar.rst  vispipe.plot_backend.MPL_Figure.get_bbox.rst  vispipe.plot_backend.MPL_Figure.hist.rst  vispipe.plot_backend.MPL_Figure.line.rst  vispipe.plot_backend.MPL_Figure.set.rst  vispipe.plot_backend.MPL_Figure.set_aspect.rst  (+2 more)
src/docs/source/reference/settings/: keyword_table.rst  options.rst
src/docs/source/reference/vispipe/: vispipe.opt_reader.rst  vispipe.vispipe.rst  vispipe_func.rst
src/vispipe/: __init__.py  _gridedit.py  _gridedit.pyi  _opt_reader.py  _options.py  _plot_backend.py  _vispipe.py  _vispipe.pyi  plot_backend.py  plot_backend.pyi  settings.json  vispipe_cli.py
src/vispipe/example/: __init__.py  readers.py  struct.npz  struct_data.npz  unstruct.npz  xy_data.npz
