[project]
name = "vispipe"
version = "1.0.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Joshua Gramm", email = "joshua.d.gramm@erdc.dren.mil" }
]
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "pint",
    "PyMuPDF",
    "netCDF4",
    "matplotlib"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
