[project]
name = "vispipe"
version = "1.0.3"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Joshua Gramm", email = "joshua.d.gramm@erdc.dren.mil" }
]
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "pint",
    "PyMuPDF",
    "netCDF4",
    "matplotlib"
]


[project.scripts]
vispipe="vispipe.vispipe_cli:main"

[build-system]
requires = ["setuptools >= 59.0"]
build-backend = "setuptools.build_meta"
